Fix Detail.view.xml and search

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -9,7 +9,7 @@
         
         
 		<ObjectHeader
-			intro="{invoice>ShipperName}"
-			title="{invoice>ProductName}"/>
+			intro="{product>Name}"
+			/>
 	</Page>
 </mvc:View>
