--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -3,14 +3,8 @@
 		xmlns="sap.m"
 		xmlns:mvc="sap.ui.core.mvc">
 	<Page title="{i18n>homePageTitle}">
-		<headerContent>
-			<Button
-					icon="sap-icon://hello-world"
-					press=".onOpenDialog"/>
-		</headerContent>
 		<content>
-			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel"/>
-			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.InvoiceList"/>
+			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.ProductList"/>
 		</content>
 	</Page>
 </mvc:View>
