--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,15 +1,15 @@
 <mvc:View
-    controllerName="sap.ui.demo.walkthrough.controller.Detail"
+   controllerName="sap.ui.demo.walkthrough.controller.Detail"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
-	<Page
-		title="{i18n>detailPageTitle}"
-        showNavButton="true"
-		navButtonPress=".onNavBack">
-        
-        
-		<ObjectHeader
-			intro="{product>Name}"
-			/>
+   <Page
+      title="{i18n>detailPageTitle}"
+      showNavButton="true"
+		navButtonPress=".onNavBack"
+      >
+      <ObjectHeader 
+      intro="{product>Supplier/Name}"/>
+      <ObjectHeader 
+      intro="{product>Category/Name}"/>
 	</Page>
 </mvc:View>
