--- a/webapp/view/ProductList.view.xml
+++ b/webapp/view/ProductList.view.xml
@@ -4,6 +4,8 @@
    xmlns:mvc="sap.ui.core.mvc">
    <List
       id="productList"
+      mode="Delete"
+		delete="handleDelete"
       headerText="{i18n>productListTitle}"
       class="sapUiResponsiveMargin"
       width="auto"
@@ -15,6 +17,9 @@
             <Title text="{i18n>productListTitle}"/>
             <ToolbarSpacer/>
             <SearchField width="50%" liveChange=".onFilterProducts"/>
+				<ToolbarSpacer/>
+            <Button icon="sap-icon://add" id="addDialogButton" type="Transparent" press="onOpenDialog" ariaLabelledBy="addButtonLabel" tooltip="Add"/>
+				<Button icon="sap-icon://edit" type="Transparent" press="onPressEdit" ariaLabelledBy="editButtonLabel" tooltip="Edit"/>          
          </Toolbar>
       </headerToolbar>
       <items>
