--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,12 +1,8 @@
-html[dir="ltr"] .myAppDemoWT .myCustomButton.sapMBtn {
-    margin-right: 0.125rem
- }
- 
- html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
-    margin-left: 0.125rem
- }
- 
  .myAppDemoWT .myCustomText {
     display: inline-block;
-    font-weight: bold;
+    font-weight: bold; 
+ }
+
+ .widthItem {
+   width: 100%;
  }
