--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -5,8 +5,7 @@
    <Page
       title="{i18n>detailPageTitle}"
       showNavButton="true"
-		navButtonPress=".onNavBack"
-      >
+		navButtonPress=".onNavBack">
        <ObjectHeader 
       intro="{product>Category/Name}"/>
       <ObjectHeader 
